--- a/mainpage.html
+++ b/mainpage.html
@@ -44,10 +44,10 @@
 		<div id="topnav">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link text-light" id="links" target="self" onclick="firstqtr()"> First Quarter  </a>
+					<a class="nav-link text-light" id="links" target="self" onclick="firstqtr()"> First Quarter  </a> <!-- when this is clicked, the text to view my 1st qtr project will appear -->
 				</li>
 				<li class="nav-item">
-					<a class="nav-link text-light" target="self" id="links" onclick="secondqtr()"> Second Quarter </a>
+					<a class="nav-link text-light" target="self" id="links" onclick="secondqtr()"> Second Quarter </a> <!-- when this is clicked, the text to view my 2nd qtr project will appear -->
 				</li>
 			</ul>
 		</div>
@@ -69,10 +69,10 @@
 
 		<script type="text/javascript">
 			function firstqtr(){
-				document.getElementById('viewQ1').innerHTML="View My First Quarter Project"
+				document.getElementById('viewQ1').innerHTML="View My First Quarter Project" // when clicked, the option to view my first qtr project will appear  
 			}
 			function secondqtr(){
-				document.getElementById('viewQ2').innerHTML="View My Second Quarter Project"
+				document.getElementById('viewQ2').innerHTML="View My Second Quarter Project" // when clicked, the option to view my 2nd qtr project will appear 
 			}
 		</script>
 </body>
