--- a/page2.html
+++ b/page2.html
@@ -26,7 +26,7 @@
 	<tr>
 		<td bgcolor="#D9BDAD"> <center> <font face="Cascadia Code Light" size="5"> 
 			<a href="https://noli-me-tangere.fandom.com/wiki/Capitan_Tiago" target="_blank">  
-				<img src="https://static.wikia.nocookie.net/noli-me-tangere/images/d/da/AviTiago.png/revision/latest?cb=20200523043309" height="200" width="200">
+				<img src="https://cdn.discordapp.com/attachments/936466972022030407/1235242519982510100/latest.png?ex=6633a8be&is=6632573e&hm=9e5c0cefb37b7e00748544e049bfee0d1ed3ee446072f7320567dafc45c7602d&" height="200" width="200">
 			</a>
 		<td bgcolor="#F0DFD5"> <font face="Cascadia Code Light" size="5"> 
 			<ul> 
