--- a/page2.html
+++ b/page2.html
@@ -26,7 +26,7 @@
 	<tr>
 		<td bgcolor="#D9BDAD"> <center> <font face="Cascadia Code Light" size="5"> 
 			<a href="https://noli-me-tangere.fandom.com/wiki/Capitan_Tiago" target="_blank">  
-				<img src="https://cdn.discordapp.com/attachments/936466972022030407/1235242519982510100/latest.png?ex=6633a8be&is=6632573e&hm=9e5c0cefb37b7e00748544e049bfee0d1ed3ee446072f7320567dafc45c7602d&" height="200" width="200">
+				<img src="ktiago.png" height="200" width="200">
 			</a>
 		<td bgcolor="#F0DFD5"> <font face="Cascadia Code Light" size="5"> 
 			<ul> 
@@ -42,7 +42,7 @@
 	<tr>
 		<td bgcolor="#D9BDAD"> <font face="Bookman Old Style" size="5"> 
 			<a href="https://noli-me-tangere.fandom.com/Do%C3%B1a_Pia_Alba" target="_blank"> 
-				<img src="https://static.wikia.nocookie.net/noli-me-tangere/images/2/27/AviPia.png/revision/latest?cb=20200523014750" height="200" width="200"> </font>
+				<img src="pia.png" height="200" width="200"> </font>
 			</a>
 		<td bgcolor="#F0DFD5" > <font face="Cascadia Code Light" size="5"> 
 			<ul> 
@@ -58,7 +58,7 @@
 	<tr>
 		<td bgcolor="#D9BDAD"> <font face="Cascadia Code Light" size="5"> 
 			<a href="https://noli-me-tangere.fandom.com/wiki/Sisa" target="_blank"> 
-				<img src="https://static.wikia.nocookie.net/noli-me-tangere/images/e/eb/AviSisa.png/revision/latest?cb=20191130021219" height="200" width="200"> 
+				<img src="sisa.png" height="200" width="200"> 
 			</a>
 		<td bgcolor="#F0DFD5" > <font face="Cascadia Code Light" size="5"> 
 			<ul> 
@@ -74,7 +74,7 @@
 	<tr>
 		<td bgcolor="#D9BDAD"> <font face="Cascadia Code Light" size="5"> 
 			<a href="https://noli-me-tangere.fandom.com/wiki/Basilio" target="_blank"> 
-				<img src="https://static.wikia.nocookie.net/noli-me-tangere/images/e/ef/AviBasilio.png/revision/latest?cb=20200523020145" height="200" width="200"> 
+				<img src="basilio.png" height="200" width="200"> 
 			</a> 
 		<td bgcolor="#F0DFD5" > <font face="Cascadia Code Light" size="5"> 
 			<ul> 
@@ -91,7 +91,7 @@
 	<tr>
 		<td bgcolor="#D9BDAD"> <font face="Cascadia Code Light" size="5"> 
 			<a href="https://noli-me-tangere.fandom.com/wiki/Crispin" target="_blank"> 
-				<img src="https://static.wikia.nocookie.net/noli-me-tangere/images/7/7b/AviCrispin.png/revision/latest?cb=20200523014743" height="200" width="200"> 
+				<img src="crispin.png" height="200" width="200"> 
 			</a>
 		<td bgcolor="#F0DFD5"> <font face="Cascadia Code Light" size="5"> 
 			<ul>
